Fixed hover on playlist time and text overflow

--- a/frontend/src/RecommendedSongs/RecommendedSongs.css
+++ b/frontend/src/RecommendedSongs/RecommendedSongs.css
@@ -37,6 +37,7 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   text-align: justify;
 }
+
 .header {
   max-width: 1200px;
 }
@@ -55,8 +56,8 @@
   height: 100%;
   object-fit: cover;
   align-items: right;
-  box-shadow: 0 4px 10px rgba(255, 255, 255, 0.15);
-  
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
+  margin-top: 5px;
 }
 
 .recommended-songs h2 {
@@ -88,4 +89,5 @@
   justify-content: center;
   align-items: center;
   margin-top: 20px; 
+  
 }
